Fix issue with PostsPage hidden by the banner

--- a/src/styles/PostsPage.module.css
+++ b/src/styles/PostsPage.module.css
@@ -17,3 +17,8 @@
     color: #cfced3;
   }
   
+
+  .PostsPanel {
+    padding-top: 200px;
+    height: 100%;
+  }
